<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionOne">

    <TextView
        android:id="@+id/questionOneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_margin="10dp"
        android:text="Who is the best cricketer in the world?"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <RadioGroup
        android:id="@+id/question_one_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questionOneTextView"
        android:orientation="vertical"
        android:layout_marginTop="25dp">

        <RadioButton
            android:id="@+id/questionOneAnswerOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionOneOptionOne"/>

        <RadioButton
            android:id="@+id/questionOneAnswerTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionOneOptionTwo"/>

        <RadioButton
            android:id="@+id/questionOneAnswerThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionOneOptionThree"/>

        <RadioButton
            android:id="@+id/questionOneAnswerFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionOneOptionfour"/>


    </RadioGroup>

    <TextView
        android:id="@+id/questionOneOptionsSelectTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_margin="10dp"
        android:text="Select any one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question_one_radioGroup">

    </TextView>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="15dp"
        android:text="NEXT"
        android:onClick="nextActivity">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>