<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionTwo">

    <TextView
        android:id="@+id/questionTwoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_margin="10dp"
        android:text="What are the colors in the Indian national flag?"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/questionTwoOptionsSelectTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_margin="10dp"
        android:text="Select more than 1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBoxLinearLayout">

    </TextView>

    <LinearLayout
        android:id="@+id/checkBoxLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/questionTwoTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/questionTwoOptionOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:text="@string/questionTwoOptionOne"
            android:onClick="onCheckBoxClicked"/>

        <CheckBox
            android:id="@+id/questionTwoOptionTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:text="@string/questionTwoOptionTwo"
            android:onClick="onCheckBoxClicked"/>

        <CheckBox
            android:id="@+id/questionTwoOptionThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:text="@string/questionTwoOptionThree"
            android:onClick="onCheckBoxClicked"/>

        <CheckBox
            android:id="@+id/questionTwoOptionFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:text="@string/questionTwoOptionFour"
            android:onClick="onCheckBoxClicked"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="15dp"
        android:text="FINISH"
        android:onClick="nextActivity">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>